@@ -1,5 +1,5 @@
 /*
- * Copyright 2007, 2008, 2009, 2010, 2011 GoogleTransitDataFeed
+ * Copyright 2007, 2008, 2009, 2010, 2011, 2012 GoogleTransitDataFeed
  * 
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -53,7 +53,7 @@ public class Transxchange2GoogleTransit {
 
 		TransxchangeHandler handler = null;
 
-        System.out.println("transxchange2GTFS 1.7.3");
+        System.out.println("transxchange2GTFS 1.7.4");
         System.out.println("Please refer to LICENSE file for licensing information");
         int foundConfigFile = -1;
         int i = 0;
